<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.commandcenter.devchat.Controller.ActivityRegister"
    android:background="@drawable/layout_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_et_email"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:id="@+id/register_et_password"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register_et_username"
            android:hint="@string/usernameHint"/>

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_et_gender"
                android:hint="@string/gender"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                android:layout_weight="1"
                android:id="@+id/register_btnRegister"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnCancel"
                android:layout_weight="1"
                android:id="@+id/register_btnCancel"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
